--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </select>
       </div>
     </div>
+    <div class="score"></div>
     <div class="container">
       <div class="grid"></div>
     </div>
